# StationaryDetector

./: .gitignore  README.md  pyproject.toml
resources/camera_parameters/: R_Andrade_Corvo.json  scenario6_campo_ourique_secundaria.json
resources/grid/: labeled_portao_secundaria_manuel_da_maia.json
src/stationary_detector/: __init__.py  main.py
