[tool.poetry]
name = "stationary-detector"
version = "0.1.0"
description = "A Python project for stationary detection analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
repository = "https://github.com/yourusername/stationary-detector"
keywords = ["python", "analysis", "detection"]
packages = [{include = "stationary_detector", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
contourpy = "1.3.1"
cycler = "0.12.1"
deep-sort-realtime = "1.3.2"
et-xmlfile = "2.0.0"
filelock = "3.19.1"
fonttools = "4.55.3"
fsspec = "2025.9.0"
hachoir = "3.3.0"
idna = "3.6"
jinja2 = "3.1.6"
kiwisolver = "1.4.7"
lap = "0.5.12"
markupsafe = "3.0.3"
matplotlib = "3.9.3"
mpmath = "1.3.0"
networkx = "3.5"
numpy = "1.26.2"
opencv-python = "4.8.1.78"
openpyxl = "3.1.5"
packaging = "24.2"
pandas = "2.1.4"
pillow = "11.0.0"
polars = "1.33.1"
psutil = "7.1.0"
pyarrow = "14.0.2"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pyyaml = "6.0.3"
requests = "2.31.0"
scipy = "1.16.2"
seaborn = "0.13.2"
six = "1.17.0"
sympy = "1.14.0"
torch = "2.8.0"
torchaudio = "2.8.0"
torchvision = "0.23.0"
typing-extensions = "4.15.0"
tzdata = "2024.2"
ultralytics = "8.3.203"
ultralytics-thop = "2.0.17"
urllib3 = "2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"

[tool.poetry.scripts]
stationary-detector = "stationary_detector.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"